--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -67,3 +67,9 @@ body {
 .start-chatting-button {
     width: 100%;
 }
+
+.username {
+    font: monospace;
+    color: red;
+    text-decoration: underline;
+}
