--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -25,7 +25,7 @@ body {
 
 .header {
     grid-area: header;
-    background-color: black;
+    background-color: aquamarine;
     text-align: center;
 }
 
@@ -37,6 +37,7 @@ body {
 /* } */
 
 .history {
+    padding: 2em;
     grid-area: history;
     background-color: white;
     max-height: calc(100vh-200px);
@@ -78,4 +79,8 @@ body {
 .usermsg {
     padding-bottom: 0;
     padding-top: 1em;
+}
+
+.message {
+    padding-left: 0.5em;
 }
