--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -1,6 +1,6 @@
 body {
-  margin: 0px;
-  padding: 0px;
+  margin: 0;
+  padding: 0;
 }
 
 .chat-container {
@@ -17,24 +17,24 @@ body {
         display: grid;
         width: 100vw;
         height: 100vh;
-        grid-template-rows: 50px 1fr 150px;
-        grid-template-columns: 200px 1fr;
-        grid-template-areas: "header header" "history history" "text-input text-input";
+        grid-template-areas: "header header" "history sidebar" "text-input text-input";
     }
 }
 
 .header {
     grid-area: header;
+    max-height: 4vh;
     background-color: aquamarine;
     text-align: center;
 }
 
-/* .sidebar { */
-/*     grid-area: sidebar; */
-/*     background-color: whitesmoke; */
-/*     max-height: calc(100vh-200px); */
-/*     overflow-y: scroll; */
-/* } */
+.sidebar {
+    grid-area: sidebar;
+    background-color: white;
+    padding: 2em;
+    border-style: double;
+    overflow-y: scroll;
+}
 
 .history {
     padding: 2em;
@@ -83,4 +83,16 @@ body {
 
 .message {
     padding-left: 0.5em;
+}
+
+.message-input {
+    width: 100%;
+    color: black;
+    margin: 1em;
+}
+
+.message-button {
+    height: 100%;
+    margin: 1.2em;
+    background-color: white;
 }
