--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -77,6 +77,10 @@ body {
     text-decoration: underline;
 }
 
+.my-username {
+    color: blue;
+}
+
 .usermsg {
     padding-bottom: 0;
     padding-top: 1em;
