--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -105,3 +105,14 @@ body {
     margin: 1.2em;
     background-color: white;
 }
+
+.error-tip {
+    text-align: center;
+    text-decoration: none;
+    border: 1px solid #bbb;
+    background-color: #fe500f;
+    color: #fff;
+    font-weight: 600;
+    line-height: 38px;
+    border-radius: 4px;
+}
