--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -139,3 +139,6 @@ p {
     font-family: "Raleway", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
+.img {
+    max-height: 1em;
+}
