--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -66,9 +66,11 @@ body {
 .header {
     user-select: none;
     grid-area: header;
-    max-height: 4em;
+    max-height: 2.5em;
     background-color: aquamarine;
-    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .sidebar {
@@ -108,9 +110,12 @@ body {
 }
 
 .message {
-    padding-left: 0.5em;
-    display: flex;
-    flex-direction: row;
+    padding-left: 0.3em;
+}
+
+.message-buttons {
+  display: flex;
+  margin: -1em -0.25em;
 }
 
 .message-input {
