--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -51,15 +51,34 @@ body {
     height: 100vh;
     grid-template-rows: 1fr;
     grid-template-columns: 1fr;
-    grid-template-areas: "header" "history" "text-input";
+    grid-template-areas: "header" "sidebar" "history" "text-input";
 }
 
-@media only screen and (min-width: 400px)  {
+.sidebar {
+    grid-area: sidebar;
+    background-color: white;
+    border-bottom: 2px solid black;
+}
+
+.user-list {
+    padding: 0;
+    margin: 0;
+    display: flex;
+    flex-direction: row;
+    overflow-x: scroll:
+}
+
+@media only screen and (min-width: 500px)  {
     .chat-container {
         display: grid;
         width: 100vw;
         height: 100vh;
         grid-template-areas: "header header" "history sidebar" "text-input text-input";
+    }
+    .user-list {
+      flex-direction: column;
+      overflow-y: scroll;
+      border: 2px solid black;
     }
 }
 
@@ -69,17 +88,11 @@ body {
     max-height: 2.5em;
     background-color: aquamarine;
     display: flex;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
 }
 
-.sidebar {
-    grid-area: sidebar;
-    background-color: white;
-    padding: 2em;
-    border-style: double;
-    overflow-y: scroll;
-}
 
 .history {
     padding: 2em;
@@ -98,6 +111,7 @@ body {
 .username {
     color: red;
     text-decoration: underline;
+    padding:  0.5em;
 }
 
 .my-username {
