--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -4,43 +4,95 @@ body {
   padding: 0;
 }
 
+/* login flow */
+.login-container {
+    display: grid;
+    width: 100vw;
+    height: 100vh;
+    grid-template-rows: 0.75fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr; 
+    grid-template-areas: ". error-tip-container ." ". login ." ". . .";
+}
+
+.login {
+    grid-area: login;
+    display: flex;
+    flex-direction: column;
+    align-self: center;
+    justify-self: center;
+    flex-flow: center;
+    align-items: center;
+}
+
+.username-input {
+    margin:  1.25em 0;
+    text-align: center;
+}
+
+.start-chatting-button {
+    margin: 0;
+}
+.error-tip-container {
+    grid-area: error-tip-container;
+}
+
+.error-tip {
+    border: 2px solid red;
+    padding: 0.5em 1em;
+    text-align: center;
+    margin: 1em;
+    align: center;
+}
+
+/* chat flow */
 .chat-container {
     display: grid;
     width: 100vw;
     height: 100vh;
     grid-template-rows: 1fr;
     grid-template-columns: 1fr;
-    grid-template-areas: "header" "history" "text-input";
+    grid-template-areas: "header" "sidebar" "history" "text-input";
 }
 
-@media only screen and (min-width: 400px)  {
+.sidebar {
+    grid-area: sidebar;
+    background-color: white;
+    border-bottom: 2px solid black;
+}
+
+.user-list {
+    padding: 0;
+    margin: 0;
+    display: flex;
+    flex-direction: row;
+    overflow-x: scroll:
+}
+
+@media only screen and (min-width: 500px)  {
     .chat-container {
         display: grid;
         width: 100vw;
         height: 100vh;
         grid-template-areas: "header header" "history sidebar" "text-input text-input";
     }
-    .sidebar {
-        display: grid;
+    .user-list {
+      flex-direction: column;
+      overflow-y: scroll;
+      border: 2px solid black;
     }
 }
 
 .header {
     user-select: none;
     grid-area: header;
-    max-height: 4vh;
+    max-height: 2.5em;
     background-color: aquamarine;
-    text-align: center;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
 }
 
-.sidebar {
-    grid-area: sidebar;
-    background-color: white;
-    padding: 2em;
-    border-style: double;
-    overflow-y: scroll;
-    display: none;
-}
 
 .history {
     padding: 2em;
@@ -56,30 +108,10 @@ body {
     width: 100%;
 }
 
-.login-container {
-    display: grid;
-    width: 100vw;
-    height: 100vh;
-    grid-template-rows: 1fr 1fr 1fr;
-    grid-template-columns: 1fr 1fr 1fr; 
-    grid-template-areas: ". . ." ". login ." ". . .";
-}
-
-.login {
-    grid-area: login;
-    align-self: center;
-    justify-self: center;
-}
-
-.start-chatting-button {
-    width: 100%;
-}
-
 .username {
-    margin-bottom: 0em;
-    font: monospace;
     color: red;
     text-decoration: underline;
+    padding:  0.5em;
 }
 
 .my-username {
@@ -92,37 +124,21 @@ body {
 }
 
 .message {
-    padding-left: 0.5em;
-    display: flex;
-    flex-direction: row;
+    padding-left: 0.3em;
+}
+
+.message-buttons {
+  display: flex;
+  margin: -1em -0.25em;
 }
 
 .message-input {
     width: 100%;
     color: black;
+    border: 2px solid black;
     margin: 1em;
-}
-
-.message-button {
-    height: 100%;
-    margin: 1.2em;
+    padding: 1em 1em;
     background-color: white;
-}
-
-.error-tip {
-    text-align: center;
-    text-decoration: none;
-    border: 1px solid #bbb;
-    background-color: #fe500f;
-    color: #fff;
-    font-weight: 600;
-    line-height: 38px;
-    border-radius: 4px;
-}
-
-p {
-    text-decoration: none;
-    margin: 0;
 }
 
 .preview-button {
@@ -134,14 +150,111 @@ p {
 .markdown-preview-box {
     border: 2px solid black;
     margin: 1em;
-    padding: 0 0.5em;
+    padding: 0 1em;
     background-color: white;
 }
 
-.markdown-preview {
-    font-family: "Raleway", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
+.send-message-button {
+    border: 2px outset black;
+    height: 100%;
+    padding: 1em;
+    margin: 1em 1em;
+    color: black;
+    background-color: white;
 }
 
+
+/* html element styles */
 img {
     max-height: 10em;
+}
+
+p {
+    text-decoration: none;
+}
+
+input {
+    color: black;
+    border: 2px solid black;
+    padding: 1em;
+    background-color: white;
+}
+
+button {
+    border: 2px solid black;
+    padding: 1em;
+    color: black;
+    background-color: white;
+
+/* the rest of this is borrowed from https://github.com/thesephist/blocks.css/blob/master/src/blocks.css for now and slightly modified. */
+    display: block;
+    padding: 4px 8px;
+    font-weight: bold;
+    cursor: pointer;
+    box-sizing: border-box;
+    position: relative;
+    top: -2px;
+    left: -2px;
+    transition: transform 0.2s;
+    margin: 8px 6px 10px 6px;
+    z-index: 1;
+    user-select: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+}
+
+/* INTERACTIVE BLOCK STYLES */
+button::before {
+  content: "";
+  background: white;
+  border: 2px solid black;
+  box-sizing: border-box;
+  position: absolute;
+  top: -3px;
+  left: -3px;
+  height: calc(100% + 6px);
+  width: calc(100% + 6px);
+  z-index: -1;
+}
+
+button:hover,
+button:focus {
+  transform: scale(0.9);
+}
+
+button::after {
+  content: "";
+  display: block;
+  box-sizing: border-box;
+  background: black;
+  border: 3px solid black;
+  height: calc(100% + 3px);
+  width: calc(100%);
+  position: absolute;
+  top: 3px;
+  right: 0;
+  z-index: -2;
+  transition: transform 0.2s;
+}
+
+button:hover::after,
+button:focus::after {
+  transform: translate(0, -3px);
+}
+
+button:active {
+  color: black;
+  transform: translate(0, 3px);
+}
+
+button:active::after {
+  transform: translate(0, -4px);
+}
+
+button:focus {
+  outline: none;
+}
+
+button.fixed {
+  cursor: initial;
 }
