--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -6,107 +6,107 @@ body {
 
 /* login flow */
 .login-container {
-    display: grid;
-    width: 100vw;
-    height: 100vh;
-    grid-template-rows: 0.75fr 1fr 1fr;
-    grid-template-columns: 1fr 1fr 1fr; 
-    grid-template-areas: ". error-tip-container ." ". login ." ". . .";
+  display: grid;
+  width: 100vw;
+  height: 100vh;
+  grid-template-rows: 0.75fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr; 
+  grid-template-areas: ". error-tip-container ." ". login ." ". . .";
 }
 
 .login {
-    grid-area: login;
-    display: flex;
-    flex-direction: column;
-    align-self: center;
-    justify-self: center;
-    flex-flow: center;
-    align-items: center;
+  grid-area: login;
+  display: flex;
+  flex-direction: column;
+  align-self: center;
+  justify-self: center;
+  flex-flow: center;
+  align-items: center;
 }
 
 .username-input {
-    margin:  1.25em 0;
-    text-align: center;
+  margin:  1.25em 0;
+  text-align: center;
 }
 
 .start-chatting-button {
-    margin: 0;
+  margin: 0;
 }
 .error-tip-container {
-    grid-area: error-tip-container;
+  grid-area: error-tip-container;
 }
 
 .error-tip {
-    border: 2px solid red;
-    padding: 0.5em 1em;
-    text-align: center;
-    margin: 1em;
-    align: center;
+  border: 2px solid red;
+  padding: 0.5em 1em;
+  text-align: center;
+  margin: 1em;
+  align: center;
 }
 
 /* chat flow */
 .chat-container {
-    display: grid;
-    width: 100vw;
-    height: 100vh;
-    grid-template-rows: 1fr;
-    grid-template-columns: 1fr;
-    grid-template-areas: "header" "sidebar" "history" "text-input";
+  display: grid;
+  width: 100vw;
+  height: 100vh;
+  grid-template-rows: 1fr;
+  grid-template-columns: 1fr;
+  grid-template-areas: "header" "sidebar" "history" "text-input";
 }
 
 .sidebar {
-    grid-area: sidebar;
-    background-color: white;
-    border-bottom: 2px solid black;
+  grid-area: sidebar;
+  background-color: white;
+  border-bottom: 2px solid black;
 }
 
 .user-list {
-    padding: 0;
-    margin: 0;
-    display: flex;
-    flex-direction: row;
-    overflow-x: scroll:
+  padding: 0;
+  margin: 0;
+  display: flex;
+  flex-direction: row;
+  overflow-x: scroll:
 }
 
 .header {
-    user-select: none;
-    grid-area: header;
-    max-height: 2.5em;
-    background-color: aquamarine;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
+  user-select: none;
+  grid-area: header;
+  max-height: 2.5em;
+  background-color: aquamarine;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
 }
 
 
 .history {
-    padding: 1.5em;
-    grid-area: history;
-    background-color: white;
-    max-height: calc(100vh-200px);
-    overflow-y: scroll;
+  padding: 1.5em;
+  grid-area: history;
+  background-color: white;
+  max-height: calc(100vh-200px);
+  overflow-y: scroll;
 }
 
 .text-input {
-    grid-area: text-input;
-    background-color: whitesmoke;
-    width: 100%;
+  grid-area: text-input;
+  background-color: whitesmoke;
+  width: 100%;
 }
 
 .username {
-    color: red;
-    text-decoration: underline;
-    margin-left: -1em;
+  color: red;
+  text-decoration: underline;
+  margin-left: -1em;
 }
 
 .my-username {
-    color: blue;
+  color: blue;
 }
 
 .usermsg {
-    padding-bottom: 0;
-    padding-top: 1em;
+  padding-bottom: 0;
+  padding-top: 1em;
 }
 
 .markdown-preview {
@@ -115,10 +115,10 @@ body {
 }
 
 .message {
-  /* padding: 1em 0.5em; */
-    display: flex;
-    flex-direction: column;
-    border-top: 1px dashed black;
+  padding-left: 0.5em;
+  display: flex;
+  flex-direction: column;
+  border-top: 1px dashed black;
 }
 
 .message-content {
@@ -129,33 +129,32 @@ body {
 
 .message-buttons {
   display: flex;
-  padding-right: 0.5em;
   max-height: 3.5em;
   max-width: 10em;
 }
 
 .message-input {
-    width: 100%;
-    color: black;
-    border: 2px solid black;
-    margin: 1em;
-    padding: 1em 1em;
-    background-color: white;
+  width: 100%;
+  color: black;
+  border: 2px solid black;
+  margin: 1em;
+  padding: 1em 1em;
+  background-color: white;
 }
 
 .preview-button {
-    margin: 1.2em;
-    background-color: white;
-    padding: 0 1em;
+  margin: 1.2em;
+  background-color: white;
+  padding: 0 1em;
 }
 
 .preview-box {
-    border: 2px solid black;
-    margin: 1em;
-    padding: 0.5em;
-    background-color: white;
-    display: flex;
-    align-items: center;
+  border: 2px solid black;
+  margin: 1em;
+  padding: 0.5em;
+  background-color: white;
+  display: flex;
+  align-items: center;
 }
 
 .reply-preview {
@@ -164,12 +163,12 @@ body {
 }
 
 .send-message-button {
-    border: 2px outset black;
-    height: 100%;
-    padding: 1em;
-    margin: 1em 1em;
-    color: black;
-    background-color: white;
+  border: 2px outset black;
+  height: 100%;
+  padding: 1em;
+  margin: 1em 1em;
+  color: black;
+  background-color: white;
 }
 
 .message-reply {
@@ -181,67 +180,67 @@ body {
 }
 
 @media only screen and (min-width: 500px)  {
-    .chat-container {
-        display: grid;
-        width: 100vw;
-        height: 100vh;
-        grid-template-areas: "header header" "history sidebar" "text-input text-input";
-    }
-    .user-list {
-      flex-direction: column;
-      overflow-y: scroll;
-      border: 2px solid black;
-    }
-    .message-content {
-      flex-direction: row;
-    }
-    .message-buttons {
-      max-width: 99999999em;
-      padding-top: 0;
-      padding-bottom: 0;
-    }
+  .chat-container {
+    display: grid;
+    width: 100vw;
+    height: 100vh;
+    grid-template-areas: "header header" "history sidebar" "text-input text-input";
+  }
+  .user-list {
+    flex-direction: column;
+    overflow-y: scroll;
+    border: 2px solid black;
+  }
+  .message-content {
+    flex-direction: row;
+  }
+  .message-buttons {
+    max-width: 99999999em;
+    padding-top: 0;
+    padding-bottom: 0;
+  }
 }
 
 
 
 /* html element styles */
 img {
-    max-height: 10em;
+  max-height: 10em;
 }
 
 p {
-    text-decoration: none;
-    margin: 0;
+  text-decoration: none;
+  margin: 0;
 }
 
 input {
-    color: black;
-    border: 2px solid black;
-    padding: 1em;
-    background-color: white;
+  color: black;
+  border: 2px solid black;
+  padding: 1em;
+  background-color: white;
 }
 
 button {
-    border: 2px solid black;
-    padding: 1em;
-    color: black;
-    background-color: white;
+  border: 2px solid black;
+  padding: 1em;
+  color: black;
+  background-color: white;
 
-/* the rest of this is borrowed from https://github.com/thesephist/blocks.css/blob/master/src/blocks.css for now and slightly modified. */
-    display: block;
-    padding: 4px 8px;
-    font-weight: bold;
-    cursor: pointer;
-    box-sizing: border-box;
-    position: relative;
-    top: -2px;
-    left: -2px;
-    transition: transform 0.2s;
-    margin: 8px 6px 10px 6px;
-    z-index: 1;
-    user-select: none;
-    -webkit-user-select: none;
-    -moz-user-select: none;
+  /* the rest of this is borrowed from https://github.com/thesephist/blocks.css/blob/master/src/blocks.css for now and slightly modified. */
+  display: block;
+  padding: 4px 8px;
+  font-weight: bold;
+  cursor: pointer;
+  box-sizing: border-box;
+  position: relative;
+  top: -2px;
+  left: -2px;
+  transition: transform 0.2s;
+  margin: 8px 6px 10px 6px;
+  z-index: 1;
+  user-select: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
 }
 
 /* INTERACTIVE BLOCK STYLES */
