--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -167,12 +167,17 @@ body {
   background-color: white;
 }
 
+.message-reply-box {
+  padding-left: 0.3em;
+  width: max-content;
+}
+
 .message-reply {
   margin: 0.5em 0;
   font-size: 16px;
   background-color: LightYellow;
   border: 2px solid black;
-  padding: 0.25em;
+  padding: 0.25em 0.5em;
 }
 
 @media only screen and (min-width: 500px)  {
