--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -80,6 +80,8 @@ body {
 
 .history {
   padding: 0 0.5em;
+  margin-bottom: 0.5em;
+
   flex-grow: 1;
   background-color: white;
   max-height: calc(100vh-200px);
@@ -101,7 +103,7 @@ body {
 
 .usermsg {
   padding-bottom: 0;
-  padding-top: 1em;
+  padding-top: 0.25em;
 }
 
 .markdown-preview {
@@ -120,12 +122,24 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  padding: 0.1em 0;
 }
 
 .message-buttons {
-  display: flex;
+  display: none;
   max-height: 3.5em;
   max-width: 10em;
+}
+
+.message:hover .message-buttons {
+  display: flex;
+}
+.message:focus .message-buttons {
+  display: flex;
+}
+
+.message:active .message-buttons {
+  display: flex;
 }
 
 .message-input {
@@ -173,7 +187,7 @@ body {
 }
 
 .message-reply {
-  margin: 0.5em 0;
+  margin-top: 0.1em;
   font-size: 16px;
   background-color: LightYellow;
   border: 2px solid black;
@@ -181,6 +195,10 @@ body {
 }
 
 @media only screen and (min-width: 500px)  {
+  .chat-container {
+    width: 80vw;
+    margin: auto;
+  }
   .message-content {
     flex-direction: row;
   }
