--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -1,5 +1,7 @@
 @import url("https://jakeisnt.github.io/styles/main.css");
 body {
+  height: 100vh;
+  width: 100vw;
   font-size: 16px;
   margin: 0;
   padding: 0;
@@ -17,6 +19,11 @@ body {
   grid-template-rows: 0.75fr 1fr 1fr;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-areas: ". error-tip-container ." ". login ." ". . .";
+}
+
+.flexrow {
+  display: flex;
+  flex-direction: row;
 }
 
 .login {
